<resources>
    <string name="app_name">TableLayoutTest</string>

    <string name="top">头条</string>
    <string name="shehui">社会</string>
    <string name="tiyu">体育</string>
    <string name="shishang">时尚</string>
    <string name="yule">娱乐</string>
    <string name="guonei">国内</string>
    <string name="guoji">国际</string>
    <string name="junshi">军事</string>
    <string name="keji">科技</string>
    <string name="caijing">财经</string>

    <string-array name="allNewsTypes">
        <item>头条</item>
        <item>社会</item>
        <item>体育</item>
        <item>时尚</item>
        <item>娱乐</item>
        <item>国内</item>
        <item>国际</item>
        <item>军事</item>
        <item>科技</item>
        <item>财经</item>
    </string-array>

</resources>
