<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"/>
        <Switch
            android:id="@+id/top_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/shehui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shehui"/>
        <Switch
            android:id="@+id/shehui_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/guonei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guonei"/>
        <Switch
            android:id="@+id/guonei_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/guoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guoji"/>
        <Switch
            android:id="@+id/guoji_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/yule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yule"/>
        <Switch
            android:id="@+id/yule_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tiyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiyu"/>
        <Switch
            android:id="@+id/tiyu_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/junshi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/junshi"/>
        <Switch
            android:id="@+id/junshi_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/keji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keji"/>
        <Switch
            android:id="@+id/keji_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/caijing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caijing"/>
        <Switch
            android:id="@+id/caijing_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/shishang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shishang"/>
        <Switch
            android:id="@+id/shishang_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
